# Summative-Reinforcement-Learning

./: .gitignore  README.md  generate_notebooks.py  main.py  play.py  pyproject.toml  serve.py
colab results/a2c_results_bundle/logs/a2c/: a2c_01.csv  a2c_03.csv  a2c_04.csv  a2c_05.csv  a2c_06.csv  a2c_07.csv  a2c_08.csv
colab results/a2c_results_bundle/results/: __init__.py  generalization.py
colab results/dqn_results_bundle/logs/dqn/: dqn_01.csv  dqn_02.csv  dqn_06.csv  dqn_08.csv  dqn_09.csv  dqn_10.csv
colab results/dqn_results_bundle/results/: analysis.py  diagnostics.py  record.py
environment/: __init__.py  custom_env.py  dynamics.py  rendering.py
logs/a2c/: a2c_02.csv  a2c_09.csv  a2c_10.csv
logs/dqn/: dqn_03.csv  dqn_04.csv  dqn_05.csv  dqn_07.csv
logs/ppo/: ppo_01.csv  ppo_02.csv  ppo_03.csv  ppo_04.csv
logs/reinforce/: reinforce_01.csv  reinforce_02.csv  reinforce_04.csv  reinforce_05.csv  reinforce_07.csv  reinforce_09.csv  reinforce_10.csv
models/reinforce/: reinforce_02.pt  reinforce_03.pt  reinforce_05.pt
notebooks/: 01_train_dqn.ipynb  02_train_reinforce.ipynb  03_train_a2c.ipynb  04_train_ppo.ipynb
report/: REPORT.md
results/: notebook_viz.py
results/hyperparameter_tables/: a2c_hyperparameters.csv  dqn_hyperparameters.csv  generalization_results.csv  ppo_hyperparameters.csv  reinforce_hyperparameters.csv
tests/: __init__.py  test_dynamics.py  test_environment.py
training/: __init__.py  a2c_training.py  dqn_training.py  hyperparameters.py  ppo_training.py  reinforce_training.py  utils.py
web/: index.html
(+20 files in other folders)
