[project]
name = "tawe-kelvin-rl-summative"
version = "1.0.0"
description = "A custom reinforcement learning environment simulating a waste segregation sorting station, trained with DQN, REINFORCE, A2C, and PPO."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tawe Kelvin" },
]

dependencies = [
    "gymnasium>=1.0.0,<2.0.0",
    "stable-baselines3>=2.3.0,<3.0.0",
    "torch>=2.2.0,<2.3.0",
    "pygame>=2.5.0,<3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "tensorboard>=2.15.0",
    "nbformat>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
serve = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["environment", "training", "results"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
